WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
11759
Windows build bustage
https://bugs.webkit.org/show_bug.cgi?id=11759
Summary
Windows build bustage
Don Gibson
Reported
2006-12-05 11:26:26 PST
Patch coming shortly
Attachments
patch for r18020
(9.17 KB, patch)
2006-12-05 11:29 PST
,
Don Gibson
no flags
Details
Formatted Diff
Diff
patch for r18084
(21.82 KB, patch)
2006-12-08 13:20 PST
,
Don Gibson
ap
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Don Gibson
Comment 1
2006-12-05 11:29:29 PST
Created
attachment 11741
[details]
patch for
r18020
Gets windows compiling again, but the resource loader is pretty screwed up. Trying to load a page results in a crash due to the ResourceHandle's client() (a SubresourceLoader) being garbage. Someone isn't holding a reference long enough. Since that stuff is all highly in flux right now, I don't care enough to fix it.
Don Gibson
Comment 2
2006-12-08 13:20:28 PST
Created
attachment 11777
[details]
patch for
r18084
Updated to newest trunk
Alexey Proskuryakov
Comment 3
2006-12-08 13:30:09 PST
Comment on
attachment 11777
[details]
patch for
r18084
Looks sane, r=me. + virtual void downloadURL(const KURL& url); This doesn't need a variable name in the header.
Alexey Proskuryakov
Comment 4
2006-12-08 13:34:19 PST
Committed revision 18086.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug